--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A service that manages a game that uses a leaderboard with players submitting new scores from around the world.",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
