--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon app.js",
     "start:dev": "nodemon app.js",
-    "test": "mocha tests/leaderboard.js --reporter spec"
+    "test": "mocha tests/*.js --reporter spec"
   },
   "repository": {
     "type": "git",
